/**
* Copyright 2022 The XSCE Authors. All rights reserved.
* 
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
* 
*     http://www.apache.org/licenses/LICENSE-2.0
* 
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*/
/**
 * @file main.h
 * @author Created by wumingzi.  2022:07:21,Thursday,00:09:48.
 * @brief 
 * @version 
 * @date 2022-05-11
 * 
 * @copyright Copyright (c) 2022
 * 
 */


#ifndef XSCE_THIRD_PARTY_PSI_ALG_MAIN_H
#define XSCE_THIRD_PARTY_PSI_ALG_MAIN_H

#include <string>

void readHugeFile(std::string fn);

#endif  //XSCE_THIRD_PARTY_PSI_ALG_MAIN_H
